testdata/baselines/reference/submodule/conformance/templateStringInModuleName.errors.txt
templateStringInModuleName.ts(1,1): error TS2304: Cannot find name 'declare'.
templateStringInModuleName.ts(1,9): error TS1005: ';' expected.
templateStringInModuleName.ts(1,9): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
templateStringInModuleName.ts(1,21): error TS1005: ';' expected.
templateStringInModuleName.ts(4,1): error TS2304: Cannot find name 'declare'.
templateStringInModuleName.ts(4,9): error TS1005: ';' expected.
templateStringInModuleName.ts(4,9): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
templateStringInModuleName.ts(4,24): error TS1005: ';' expected.


==== templateStringInModuleName.ts (8 errors) ====
    declare module `M1` {
    ~~~~~~~
!!! error TS2304: Cannot find name 'declare'.
            ~~~~~~
!!! error TS1005: ';' expected.
            ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
                        ~
!!! error TS1005: ';' expected.
    }
    
    declare module `M${2}` {
    ~~~~~~~
!!! error TS2304: Cannot find name 'declare'.
            ~~~~~~
!!! error TS1005: ';' expected.
            ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
                           ~
!!! error TS1005: ';' expected.
    }